<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:background="@color/ColorBackground"
    tools:context=".login">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:contentDescription="@string/login"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/edt_bkgd"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:inputType="text"
        android:hint="@string/Username"
        android:textColorHint="@android:color/darker_gray"
        android:layout_marginBottom="20dp"
        android:textColor="@android:color/white"
        android:importantForAutofill="no" />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/edt_bkgd"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:inputType="textPassword"
        android:hint="@string/Password"
        android:textColorHint="@android:color/darker_gray"
        android:layout_marginBottom="5dp"
        android:textColor="@android:color/white"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:text="@string/ForgotPassword"
        android:textSize="17sp"
        android:layout_gravity="end"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="55dp"/>

    <Button
        android:id="@+id/update"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_bkgd"
        android:text="@string/LoginButton"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"/>

</LinearLayout>

</RelativeLayout>